--- a/Index.html
+++ b/Index.html
@@ -26,17 +26,27 @@
             <!-- NAVIGATION -->
             <nav class="menu">
                 <ul>
-                    <li><a href = "Procucts.html">Alla spel</a></li>
-                    <li><a href = "Categories.html">Kategorier</a></li>
-                    <li><a href = "URL">Forum</a></li>
-                    <li><a href = "URL">Låna</a></li>
-                    <li><a href = "URL">Loppis</a></li>
+                  <li><a href = "Products.html">Alla spel</a></li>
+                  <li><a href = "Categories.html">Kategorier</a></li>
+                  <li><a href = "URL">Forum</a></li>
+                  <li><a href = "URL">Låna</a></li>
+                  <li><a href = "URL">Loppis</a></li>
+                  <li id="search"><a href = "URL">Sök</a></li>
                 </ul>
-                <ul>
-                    <li id="search"><a href = "URL">Sök</a></li>
-                </ul>
+            </nav>
 
-                <div><i id="burger"><img src="src/menu.png" alt="menu"></i></div>
+            <nav class="menu_responsive">
+              <ul>
+                <li><a href = "URL">Sök</a></li>
+                <li><a href = "Products.html">Alla spel</a></li>
+                <li><a href = "Categories.html">Kategorier</a></li>
+                <li><a href = "URL">Forum</a></li>
+                <li><a href = "URL">Låna</a></li>
+                <li><a href = "URL">Loppis</a></li>
+                <li><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
+                <li><a href = "URL"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
+                <li><a href = "URL"><i id="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
+              </ul>
             </nav>
 
             <!-- CONTENT -->
@@ -256,12 +266,10 @@
 
             <!-- FOOTER -->
             <footer class="footer">
-
-                <div id="adress">Hitta oss!</div>
-                <div id="contact">Kontakta oss!</div>
-                <div class="links">Följ oss!</div>
-
+              <div class="footer_info">bottom text</div>
+              <br>
             </footer>
+  
             
         <!-- END CONTAINER -->
         </div>
