--- a/Products.html
+++ b/Products.html
@@ -24,18 +24,28 @@
 
         <!-- NAVIGATION -->
         <nav class="menu">
-            <ul>
-                <li class="active"><a href = "Procucts.html">Alla spel</a></li>
-                <li><a href = "Categories.html">Kategorier</a></li>
-                <li><a href = "URL">Forum</a></li>
-                <li><a href = "URL">Låna</a></li>
-                <li><a href = "URL">Loppis</a></li>
-            </ul>
-            <ul>
-                <li id="search"><a href = "URL">Sök</a></li>
-            </ul>
-                
-            <div><i id="burger"><img src="src/menu.png" alt="menu" style="width:auto;height:auto;"></i></div>
+          <ul>
+            <li class="active"><a href = "Products.html">Alla spel</a></li>
+            <li><a href = "Categories.html">Kategorier</a></li>
+            <li><a href = "URL">Forum</a></li>
+            <li><a href = "URL">Låna</a></li>
+            <li><a href = "URL">Loppis</a></li>
+            <li id="search"><a href = "URL">Sök</a></li>
+          </ul>
+        </nav>
+
+        <nav class="menu_responsive">
+          <ul>
+            <li class="active"><a href = "URL">Sök</a></li>
+            <li><a href = "Products.html">Alla spel</a></li>
+            <li><a href = "Categories.html">Kategorier</a></li>
+            <li><a href = "URL">Forum</a></li>
+            <li><a href = "URL">Låna</a></li>
+            <li><a href = "URL">Loppis</a></li>
+            <li><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
+            <li><a href = "URL"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
+            <li><a href = "URL"><i id="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
+          </ul>
         </nav>
         
         <!-- CATEGORY INFORMATION -->
@@ -54,31 +64,33 @@
 
         <!-- PRODUCT DISPLAY -->
         <section class="product_display">
-          <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="src/kat4.png"><img src="src/kat1.png" alt="kategori"></a>
-                <div class="desc">Add a description of the image here</div>
+          <div class="first_display">
+            <div class="responsive">
+              <div class="gallery">
+                  <a target="_blank" href="src/kat4.png"><img src="src/kat1.png" alt="kategori"></a>
+                  <div class="desc">Add a description of the image here</div>
+              </div>
             </div>
-          </div>
 
-          <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="src/kat5.png"><img src="src/kat2.png" alt="kategori"></a>
-                <div class="desc">Add a description of the image here</div>
+            <div class="responsive">
+              <div class="gallery">
+                  <a target="_blank" href="src/kat5.png"><img src="src/kat2.png" alt="kategori"></a>
+                  <div class="desc">Add a description of the image here</div>
+              </div>
             </div>
-          </div>
 
-          <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="src/kat1.png"><img src="src/kat3.png" alt="kategori"></a>
-                <div class="desc">Add a description of the image here</div>
+            <div class="responsive">
+              <div class="gallery">
+                  <a target="_blank" href="src/kat1.png"><img src="src/kat3.png" alt="kategori"></a>
+                  <div class="desc">Add a description of the image here</div>
+              </div>
             </div>
-          </div>
 
-          <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="src/kat2.png"><img src="src/kat4.png" alt="kategori"></a>
-                <div class="desc">Add a description of the image here</div>
+            <div class="responsive">
+              <div class="gallery">
+                  <a target="_blank" href="src/kat2.png"><img src="src/kat4.png" alt="kategori"></a>
+                  <div class="desc">Add a description of the image here</div>
+              </div>
             </div>
           </div>
 
@@ -186,10 +198,9 @@
 
         <!-- FOOTER -->
         <footer class="footer">
-            <div id="adress">Hitta oss!</div>
-            <div id="contact">Kontakta oss!</div>
-            <div class="links">Följ oss!</div>
+          <div class="footer_info">bottom text</div>
         </footer>
+
 
     <!--- END CONTAINER -->
     </div> 
