--- a/Categories.html
+++ b/Categories.html
@@ -12,12 +12,12 @@
     <!--- CONTAINER -->
     <div class="container">
 
-        <!-- HEADER -->
+        <!-- HEADER --> 
         <header class="header">
           <figure id="logo"><a href = "Index.html"></i><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
           <div id="quick_link">
               <div class="icon"><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
-              <div class="icon"><a href = "URL"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
+              <div class="icon"><a href = "Login.html"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
               <div class="icon"><a href = "URL"><i id="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></div>
           </div>
         </header>
@@ -27,7 +27,7 @@
           <ul>
             <li><a href = "Products.html">Alla spel</a></li>
             <li class="active"><a href = "Categories.html">Kategorier</a></li>
-            <li><a href = "URL">Forum</a></li>
+            <li><a href = "Forum.html">Forum</a></li>
             <li><a href = "URL">Låna</a></li>
             <li><a href = "URL">Loppis</a></li>
             <li id="search"><a href = "URL">Sök</a></li>
@@ -39,80 +39,77 @@
             <li><a href = "URL">Sök</a></li>
             <li><a href = "Products.html">Alla spel</a></li>
             <li class="active"><a href = "Categories.html">Kategorier</a></li>
-            <li><a href = "URL">Forum</a></li>
+            <li><a href = "Forum.html">Forum</a></li>
             <li><a href = "URL">Låna</a></li>
             <li><a href = "URL">Loppis</a></li>
             <li><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
-            <li><a href = "URL"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
+            <li><a href = "Login.html"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
             <li><a href = "URL"><i id="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
           </ul>
         </nav>
 
         <!-- CATEGORIES -->
-        <section class="display">
-          <div class="first_display">
-
-            <div class="responsive">
-              <div class="gallery">
-                  <a href="Products.html"><img src="src/kat1.png" alt="kategori"></a>
-                  <div class="desc">Add a description of the image here</div>
-              </div>
-            </div>
-
-            <div class="responsive">
-              <div class="gallery">
-                  <a href="Products.html"><img src="src/kat2.png" alt="kategori"></a>
-                  <div class="desc">Add a description of the image here</div>
-              </div>
-            </div>
-
-            <div class="responsive">
-              <div class="gallery">
-                  <a href="Products.html"><img src="src/kat3.png" alt="kategori"></a>
-                  <div class="desc">Add a description of the image here</div>
-              </div>
-            </div>
-
-            <div class="responsive">
-              <div class="gallery">
-                  <a href="Products.html"><img src="src/kat4.png" alt="kategori"></a>
-                  <div class="desc">Add a description of the image here</div>
-              </div>
-            </div>
-            
-          </div>
+        <div class="category_display">
 
           <div class="responsive">
             <div class="gallery">
-                <a href="Products.html"><img src="src/kat5.png" alt="kategori"></a>
-                <div class="desc">Add a description of the image here</div>
+                <a target="_blank" href="src/kat4.png"><img src="src/kat1.png" alt="kategori"></a>
+                <div class="desc"><p>Barnspel</p></div>
             </div>
           </div>
 
           <div class="responsive">
             <div class="gallery">
-                <a href="Products.html"><img src="src/kat4.png" alt="kategori"></a>
-                <div class="desc">Add a description of the image here</div>
+                <a target="_blank" href="src/kat5.png"><img src="src/kat2.png" alt="kategori"></a>
+                <div class="desc"><p>Familjespel</p></div>
             </div>
           </div>
 
           <div class="responsive">
             <div class="gallery">
-                <a href="Products.html"><img src="src/kat2.png" alt="kategori"></a>
-                <div class="desc">Add a description of the image here</div>
+                <a target="_blank" href="src/kat1.png"><img src="src/kat3.png" alt="kategori"></a>
+                <div class="desc"><p>Krigsspel</p></div>
             </div>
           </div>
 
           <div class="responsive">
             <div class="gallery">
-                <a href="Products.html"><img src="src/kat1.png" alt="kategori"></a>
-                <div class="desc">Add a description of the image here</div>
+                <a target="_blank" href="src/kat1.png"><img src="src/kat3.png" alt="kategori"></a>
+                <div class="desc"><p>Kortspel</p></div>
+            </div>
+          </div>
+
+          <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="src/kat2.png"><img src="src/kat4.png" alt="kategori"></a>
+                <div class="desc"><p>Rollspel</p></div>
+            </div>
+          </div>
+
+          <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="src/kat3.png"><img src="src/kat2.png" alt="kategori"></a>
+                <div class="desc"><p>Strategispel</p></div>
+            </div>
+          </div>
+
+          <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="src/kat3.png"><img src="src/kat1.png" alt="kategori"></a>
+                <div class="desc"><p>Vuxen/partyspel</p></div>
+            </div>
+          </div>
+
+          <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="src/kat4.png"><img src="src/kat3.png" alt="kategori"></a>
+                <div class="desc"><p>Tillvärkare</p></div>
             </div>
           </div>
 
           <div class="clearfix"></div>
 
-        </section>
+        </div>
 
         <!-- FOOTER -->
         <footer class="footer">
