--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
               <figure id="logo"><a href = "Index.html"></i><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
               <div id="quick_link">
                   <div class="icon"><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
-                  <div class="icon"><a href = "URL"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
+                  <div class="icon"><a href = "Login.html"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
                   <div class="icon"><a href = "URL"><i id="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></div>
               </div>
             </header>
@@ -28,7 +28,7 @@
                 <ul>
                   <li><a href = "Products.html">Alla spel</a></li>
                   <li><a href = "Categories.html">Kategorier</a></li>
-                  <li><a href = "URL">Forum</a></li>
+                  <li><a href = "Forum.html">Forum</a></li>
                   <li><a href = "URL">Låna</a></li>
                   <li><a href = "URL">Loppis</a></li>
                   <li id="search"><a href = "URL">Sök</a></li>
@@ -40,11 +40,11 @@
                 <li><a href = "URL">Sök</a></li>
                 <li><a href = "Products.html">Alla spel</a></li>
                 <li><a href = "Categories.html">Kategorier</a></li>
-                <li><a href = "URL">Forum</a></li>
+                <li><a href = "Forum.html">Forum</a></li>
                 <li><a href = "URL">Låna</a></li>
                 <li><a href = "URL">Loppis</a></li>
                 <li><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
-                <li><a href = "URL"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
+                <li><a href = "Login.html"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
                 <li><a href = "URL"><i id="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
               </ul>
             </nav>
@@ -168,8 +168,13 @@
 
             <section class="about">
                 <h1>Om oss</h1> 
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <p>
+                  WorldofBoardGames drivs av det svenska företaget Incrade KB (969701-0636). Incrade startades år 2004 och drivs av fem delägare, 
+                  som arbetar med att utveckla olika projekt varav WorldofBoardGames.com är ett. Företaget är baserat i Umeå.</p>
+                <h3>Affärsidé</h3>
+                <p>
+                  WorldofBoardGames affärsidé är att sälja brädspel, sällskapsspel och kortspel till låga priser samt att ge våra 
+                  besökare bästa tänkbara information och service.</p>
             </section>
 
             <aside class="sale">
@@ -233,7 +238,7 @@
               <div class="clearfix"></div>
             </aside>
 
-            <section class="chat">
+            <section class="forum_preview">
               <table>
                 <tr>
                   <th>Forum</th>
@@ -262,7 +267,39 @@
                 </tr>
               </table>
             </section>
-            <figure class="extra"><img src="src/color.png" alt="färgscheman"></figure>
+
+            <section class="forum_smal">
+              <table>
+                <tr>
+                  <th>Forum</th>
+                  <th>Senaste inlägget</th>
+                </tr>
+                <tr>
+                  <td>Allmänt om brädspel, kortspel och rollspel</td>
+                  <td>Efter lyser ett familjebrädspel!</td>
+                </tr>
+                <tr>
+                  <td>Brädspel att spela på internet eller ladda ner</td>
+                  <td>Keyforge: Tokens</td>
+                </tr>
+                <tr>
+                  <td>Butiken i umeå</td>
+                  <td>Dessa spel kan du spela i butiken eller låna hem</td>
+                </tr>
+                <tr>
+                  <td>Förslag på sällskapsspel/brädspel som du saknar i butiken</td>
+                  <td>First Empires, Caesar's Empire, Orichalcum</td>
+                </tr>
+              </table>
+            </section>
+            
+            <aside class="extra">
+              
+              <video  autoplay muted controls loop>
+                <source src="src/dice.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </aside>
 
             <!-- FOOTER -->
             <footer class="footer">
