--- a/Product.html
+++ b/Product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Produkter</title>
+        <title>Produkt</title>
         <meta charset="UTF-8">
         <meta name="author" content="Tuva Falk">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,8 +49,13 @@
         </nav>
         
         <!-- CATEGORY INFORMATION -->
+        <aside class="product_image">
+            <img src="src/thumbnail_arkhamhorror.png" alt="clouds">
+        </aside>
+
         <section class="category_info">
-            <h2>Sällskapsspel</h2>
+
+            <h2>Arkham Horror</h2>
             <br>
             <br>
             <br>
@@ -71,11 +76,15 @@
                  | 							
               <a target="_blank" href="https://www.worldofboardgames.com/vuxen_partyspel">Vuxen/partyspel</a>        
             </p>
-          </section>
+        </section>
 
-        <aside class="aside_products">
-            <img src="src/clouds.jpg" alt="clouds">
-        </aside>
+        <section>
+            <h2>Produktbeskrivning</h2>
+            <p>The boundaries between worlds have drawn perilously thin. Dark forces work in the shadows and call upon unspeakable horrors, strange happenings are discovered all throughout the city of Arkham, Massachusetts, and behind it all an Ancient One manipulates everything from beyond the veil. It is time to revisit that which started it all… 
+                With a revamped system of organization and a number of quality-of-life improvements, this new version of the beloved LCG’s core set is the perfect way for someone to dive into the game. The box comes with everything you need to get your Arkham campaigns started, including enough cards and components for up to three other players to join you in your quest against the Mythos. There is a reason why Arkham Horror: The Card Game has captivated players for almost five whole years!
+            </p>
+
+        </section>
 
         <!-- PRODUCT DISPLAY -->
         <section class="product_display">
