--- a/Index.html
+++ b/Index.html
@@ -169,7 +169,7 @@
             <section class="about">
                 <h1>Om oss</h1> 
                 <p>
-                  WorldofBoardGames drivs av det svenska företaget Incrade KB (969701-0636). Incrade startades år 2004 och drivs av fem delägare, 
+                  WorldofBoardGames b drivs av det svenska företaget Incrade KB (969701-0636). Incrade startades år 2004 och drivs av fem delägare, 
                   som arbetar med att utveckla olika projekt varav WorldofBoardGames.com är ett. Företaget är baserat i Umeå.</p>
                 <h3>Affärsidé</h3>
                 <p>
