--- a/Categories.html
+++ b/Categories.html
@@ -14,7 +14,7 @@
 
         <!-- HEADER --> 
         <header class="header">
-          <figure id="logo"><a href = "Index.html"></i><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
+          <figure id="logo"><a href = "index.html"></i><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
           <div id="quick_link">
               <div class="icon"><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
               <div class="icon"><a href = "Login.html"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
