--- a/Forum.html
+++ b/Forum.html
@@ -17,9 +17,9 @@
             <header class="header">
               <figure id="logo"><a href = "index.html"></i><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
               <div id="quick_link">
-                  <div class="icon"><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
-                  <div class="icon"><a href = "Login.html"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
-                  <div class="icon"><a href = "URL"><i id="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></div>
+                  <div class="icon"><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
+                  <div class="icon"><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
+                  <div class="icon"><a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></div>
               </div>
             </header>
 
@@ -43,9 +43,9 @@
                 <li class="active"><a href = "Forum.html">Forum</a></li>
                 <li><a href = "URL">Låna</a></li>
                 <li><a href = "URL">Loppis</a></li>
-                <li><a href = "URL"><i id="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
-                <li><a href = "Login.html"><i id="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
-                <li><a href = "URL"><i id="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
+                <li><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
+                <li><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
+                <li><a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
               </ul>
             </nav>
 
