--- a/Products.html
+++ b/Products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
     <head>
         <title>Produkter</title>
         <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 
         <!-- HEADER -->
         <header class="header">
-          <figure id="logo"><a href = "index.html"></i><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
+          <figure id="logo"><a href = "index.html"><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
           <div id="quick_link">
               <div class="icon"><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
               <div class="icon"><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
@@ -78,7 +78,7 @@
         </aside>
 
         <!-- PRODUCT DISPLAY -->
-        <section class="product_display">
+        <div class="product_display">
           <div class="responsive">
             <div class="gallery">
                 <a target="_blank" href="src/kat4.png"><img src="src/kat2.png" alt="kategori"></a>
@@ -243,7 +243,7 @@
 
           <div class="clearfix"></div>
 
-        </section>
+        </div>
 
         <!-- FOOTER -->
         <footer class="footer">
