--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
     <head>
         <title>World of Board Games</title>
         <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 
             <!-- HEADER -->
             <header class="header">
-              <figure id="logo"><a href = "index.html"></i><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
+              <figure id="logo"><a href = "index.html"><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
               <div id="quick_link">
                   <div class="icon"><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
                   <div class="icon"><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
@@ -238,60 +238,56 @@
               <div class="clearfix"></div>
             </aside>
 
-            <section class="forum_preview">
-              <table>
-                <tr>
-                  <th>Forum</th>
-                  <th>Ämne</th>
-                  <th>Senaste inlägget</th>
-                </tr>
-                <tr>
-                  <td>Allmänt om brädspel, kortspel och rollspel</td>
-                  <td>Allmänt</td>
-                  <td>Efter lyser ett familjebrädspel!</td>
-                </tr>
-                <tr>
-                  <td>Brädspel att spela på internet eller ladda ner</td>
-                  <td>Online</td>
-                  <td>Keyforge: Tokens</td>
-                </tr>
-                <tr>
-                  <td>Butiken i umeå</td>
-                  <td>Butiken</td>
-                  <td>Dessa spel kan du spela i butiken eller låna hem</td>
-                </tr>
-                <tr>
-                  <td>Förslag på sällskapsspel/brädspel som du saknar i butiken</td>
-                  <td>Butiken</td>
-                  <td>First Empires, Caesar's Empire, Orichalcum</td>
-                </tr>
-              </table>
-            </section>
+            <table class="forum_preview">
+              <tr>
+                <th>Forum</th>
+                <th>Ämne</th>
+                 <th>Senaste inlägget</th>
+              </tr>
+              <tr>
+                <td>Allmänt om brädspel, kortspel och rollspel</td>
+                <td>Allmänt</td>
+                <td>Efter lyser ett familjebrädspel!</td>
+              </tr>
+              <tr>
+                <td>Brädspel att spela på internet eller ladda ner</td>
+                <td>Online</td>
+                <td>Keyforge: Tokens</td>
+              </tr>
+              <tr>
+                <td>Butiken i umeå</td>
+                <td>Butiken</td>
+                <td>Dessa spel kan du spela i butiken eller låna hem</td>
+              </tr>
+              <tr>
+                <td>Förslag på sällskapsspel/brädspel som du saknar i butiken</td>
+                <td>Butiken</td>
+                <td>First Empires, Caesar's Empire, Orichalcum</td>
+              </tr>
+            </table>
 
-            <section class="forum_smal">
-              <table>
-                <tr>
-                  <th>Forum</th>
-                  <th>Senaste inlägget</th>
-                </tr>
-                <tr>
-                  <td>Allmänt om brädspel, kortspel och rollspel</td>
-                  <td>Efter lyser ett familjebrädspel!</td>
-                </tr>
-                <tr>
-                  <td>Brädspel att spela på internet eller ladda ner</td>
-                  <td>Keyforge: Tokens</td>
-                </tr>
-                <tr>
-                  <td>Butiken i umeå</td>
-                  <td>Dessa spel kan du spela i butiken eller låna hem</td>
-                </tr>
-                <tr>
-                  <td>Förslag på sällskapsspel/brädspel som du saknar i butiken</td>
-                  <td>First Empires, Caesar's Empire, Orichalcum</td>
-                </tr>
-              </table>
-            </section>
+            <table class="forum_smal">
+              <tr>
+                <th>Forum</th>
+                <th>Senaste inlägget</th>
+              </tr>
+              <tr>
+                <td>Allmänt om brädspel, kortspel och rollspel</td>
+                <td>Efter lyser ett familjebrädspel!</td>
+              </tr>
+              <tr>
+                <td>Brädspel att spela på internet eller ladda ner</td>
+                <td>Keyforge: Tokens</td>
+              </tr>
+              <tr>
+                <td>Butiken i umeå</td>
+                <td>Dessa spel kan du spela i butiken eller låna hem</td>
+              </tr>
+              <tr>
+                <td>Förslag på sällskapsspel/brädspel som du saknar i butiken</td>
+                <td>First Empires, Caesar's Empire, Orichalcum</td>
+              </tr>
+            </table>
             
             <aside class="extra">
               
