--- a/Forum.html
+++ b/Forum.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="author" content="Tuva Falk">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="Global.css" />   
+        <link rel="stylesheet" type="text/css" href="Global.css">   
     </head>
    
     <body>
